@@ -1,6 +1,14 @@
 Revision history for Perl extension PPI
 
 {{$NEXT}}
+	Summary:
+	- Implement support for parsing features
+
+	Details:
+	- Framework for recognition of parsing feature activation via:
+	  - `use $PERL_VERSION` in code
+	  - `use feature` in code
+	  - PPI::Document->new( feature_mods => ... )
 
 1.279   2024-08-23 14:02:44Z
 	Summary:
